--- a/SendMailWPF/SendMailWPF.csproj
+++ b/SendMailWPF/SendMailWPF.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\LibControls\LibControls.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
